Added  a register  route and class

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
             <a class="ui item">Logout</a>
         </div>
     </div>
-    <div class="ui grid centered container">
+    <div class="ui grid container">
         {% block body %} {% endblock %}
     </div>
 </body>
